--- a/debug.html
+++ b/debug.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Enyo Bootplate App</title>
+		<title>Shopping List Manager</title>
 		<link rel="shortcut icon" href="assets/favicon.ico">
 		<!-- -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8">
@@ -14,7 +14,7 @@
 	</head>
 	<body class="enyo-unselectable">
 		<script>
-			new App().write();
+			APP = new App().write();
 		</script>
 	</body>
 </html>
