--- a/debug.html
+++ b/debug.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="enyo-unselectable">
 		<script>
-			APP = new App().write();
+			APP = new ShoppingListManager().write();
 		</script>
 	</body>
 </html>
