--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body class="enyo-unselectable">
 		<script>
-			new App().write();
+			new ShoppingListManager().write();
 		</script>
 	</body>
 </html>
