--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 	<head>
 		<title>Shopping List Manager</title>
+		<script src="../enyo/1.0/framework/enyo.js" type="text/javascript"></script>
+		<script>
+			console.log("ApplicationEvents is "+enyo.ApplicationEvents)
+		</script>
 		<link rel="shortcut icon" href="assets/favicon.ico">
 		<!-- -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8">
